<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:theme="@style/AppTheme.NoActionBar.Fullscreen">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingStart="24dp"
		android:paddingEnd="24dp">

		<ImageView
			android:id="@+id/picture"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="40dp"
			android:src="@drawable/ic_camera_permission" />

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="2dp"
			android:text="@string/camera_permission_title"
			android:textAppearance="?textAppearanceHeadline6" />

		<TextView
			android:id="@+id/description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/camera_permission_description"
			android:textAppearance="?textAppearanceBody1"
			android:textColor="?android:textColorSecondary" />
	</LinearLayout>

	<TextView
		android:id="@+id/btn_deny"
		style="@style/AppTheme.RoundButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:background="@android:color/transparent"
		android:text="@string/btn_deny"
		android:textColor="?colorAccent" />

	<TextView
		android:id="@+id/btn_allow"
		style="@style/AppTheme.RoundButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="24dp"
		android:text="@string/btn_allow" />
</LinearLayout>