<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:layout_width="match_parent"
			android:layout_height="256dp"
			app:collapsedTitleTextAppearance="@style/TextAppearance.CollapsedTitle"
			app:contentScrim="?colorPrimary"
			app:expandedTitleTextAppearance="@style/TextAppearance.ExpandedTitle"
			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
			app:title="@string/create_note">

			<ImageView
				android:id="@+id/picture_preview"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:scaleType="centerCrop"
				app:layout_collapseMode="parallax"
				app:layout_collapseParallaxMultiplier="0.5" />

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?android:attr/actionBarSize"
				android:theme="@style/AppTheme.Inverted.ActionBar"
				app:layout_collapseMode="pin" />
		</com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="16dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:paddingStart="16dp"
				android:paddingEnd="16dp">

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/container_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					app:errorEnabled="true">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_title"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/hint_title" />
				</com.google.android.material.textfield.TextInputLayout>

				<com.oleksandrlysun.traveminder.presentation.views.TagsView
					android:id="@+id/tags_view"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:layout_marginBottom="16dp"
					android:orientation="vertical"
					app:controlColor="@color/colorLink" />

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="16dp"
					app:counterEnabled="true"
					app:counterMaxLength="255">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_description"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/hint_description"
						android:maxLength="255" />
				</com.google.android.material.textfield.TextInputLayout>

				<RelativeLayout
					android:id="@+id/btn_add_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true">

					<ImageView
						android:id="@+id/icon_add_date_field"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_alignParentTop="true"
						android:src="@drawable/ic_add_8dp"
						android:tint="@color/colorLink" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@id/icon_add_date_field"
						android:text="@string/btn_add_date"
						android:textColor="@color/colorLink" />
				</RelativeLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/container_date"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="16dp"
					android:visibility="gone">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_date"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:cursorVisible="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:hint="@string/hint_date" />
				</com.google.android.material.textfield.TextInputLayout>

				<RelativeLayout
					android:id="@+id/btn_add_alarm_date"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true">

					<ImageView
						android:id="@+id/icon_add_alarm_date_field"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_alignParentTop="true"
						android:src="@drawable/ic_add_8dp"
						android:tint="@color/colorLink" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						android:layout_marginTop="0dp"
						android:layout_toEndOf="@id/icon_add_alarm_date_field"
						android:text="@string/btn_add_alarm_date"
						android:textColor="@color/colorLink" />
				</RelativeLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/container_alarm"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginBottom="16dp"
					android:visibility="gone">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_alarm_date"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:cursorVisible="false"
						android:focusable="false"
						android:focusableInTouchMode="false"
						android:hint="@string/hint_alarm_date" />
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>
		</androidx.cardview.widget.CardView>
	</androidx.core.widget.NestedScrollView>

	<FrameLayout
		android:id="@+id/btn_save"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_gravity="bottom"
		android:background="?colorPrimary"
		android:clickable="true"
		android:focusable="true"
		android:foreground="?selectableItemBackground">

		<TextView
			style="@style/AppTheme.Inverted"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:text="@string/btn_save"
			android:textAppearance="?textAppearanceBody1" />
	</FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>